// Vitest Snapshot v1

exports[`autoAddRelayurlByPubkeyStaff 3`] = `Set {}`;

exports[`autoAddRelayurlByPubkeyStaff 4`] = `
[
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "0",
    "url": "url1",
  },
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "1",
    "url": "wss://0.com",
  },
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "2",
    "url": "wss://1.com",
  },
]
`;

exports[`autoAddRelayurlByPubkeyStaff 5`] = `
Set {
  "ws://url2",
  "ws://url3",
}
`;

exports[`autoAddRelayurlByPubkeyStaff 6`] = `
Set {
  "ws://url2",
  "ws://url3",
  "ws://url5",
  "ws://url6",
}
`;

exports[`autoAddRelayurlByPubkeyStaff 7`] = `
{
  "close": [],
  "closeReq": [],
  "publish": [],
  "req": [
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "0",
      "url": "url1",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "1",
      "url": "wss://0.com",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "2",
      "url": "wss://1.com",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "3",
      "url": "ws://url2",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "4",
      "url": "ws://url4",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "5",
      "url": "ws://url3",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "6",
      "url": "ws://url5",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "7",
      "url": "ws://url7",
    },
    {
      "filters": [
        {
          "authors": [
            "test-user-id-1",
          ],
          "kinds": [
            10002,
          ],
        },
      ],
      "subId": "8",
      "url": "ws://url6",
    },
  ],
}
`;

exports[`autoAddRelayurlByPubkeyStaff：停止随机请求 3`] = `
Set {
  "ws://url2",
  "ws://url3",
}
`;

exports[`autoAddRelayurlByPubkeyStaff：停止随机请求 4`] = `
[
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "0",
    "url": "url1",
  },
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "1",
    "url": "ws://url2",
  },
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "2",
    "url": "ws://url4",
  },
  {
    "filters": [
      {
        "authors": [
          "test-user-id-1",
        ],
        "kinds": [
          10002,
        ],
      },
    ],
    "subId": "3",
    "url": "ws://url3",
  },
]
`;
